--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve",
+    "build": "webpack",
+    "watch": "webpack --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
