--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack",
+    "build": "NODE_ENV = production webpack",
+    "build-dev": "webpack",
     "watch": "webpack --watch",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,6 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.3"
